Fix build on JDK 16+